feat: update package description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "short-url",
   "version": "0.0.1",
-  "description": "feat: short-url to long url in nest",
+  "description": "short-url to long url in nest",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
